# Linear-Regression

./: Makefile  README.md  environment.yaml  ols.py  pyproject.toml
src/data/: clean_dataset.py
src/models/: ols.py
