[tool.poetry]
name = "regression-from-scratch"
version = "0.1.0"
description = ""
authors = ["Prasanth N <prasanth061993@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.2"
numpy = "^2.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
